Testing Progress StoryListViewModelTest - 2